--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,14 @@
             <version>2.3.3.RELEASE</version>
         </dependency>
 
+        <!--rabbitMq-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>2.3.3.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 
 
